hphp/hack/test/typecheck/like_types/pessimization/decl_types/tapply_class.php.exp
File "tapply_class.php", line 9, characters 3-13:
  C
File "tapply_class.php", line 13, characters 3-13:
  E<~int>
File "tapply_class.php", line 17, characters 3-13:
  R<int>
File "tapply_class.php", line 21, characters 3-13:
  E<dynamic>
File "tapply_class.php", line 25, characters 3-13:
  R<dynamic>
File "tapply_class.php", line 29, characters 3-13:
  E<~int>
File "tapply_class.php", line 33, characters 3-13:
  R<~int>
File "tapply_class.php", line 24, characters 28-34:
This is dynamic, it cannot be used as a reified type argument (Typing[4305])
File "tapply_class.php", line 6, characters 15-15:
T is reified
